[package]
name = "glowing_happiness"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "=1", features = ["derive"] }
toml = "=0.9.7"
thiserror = "=2.0.17"
clap = { version = "=4.5.20", features = ["derive"] }
pnet = "=0.34.0"

[dev-dependencies]
assert_cmd = "=2.0"
predicates = "=3.1"
tempfile = "=3.23"

[[bin]]
name = "ether-demo"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
